* Changelog

** Unreleased

*Features*

- Upgrade =vino-inv= module to Vulpea v2.
- Enable alias expansion in all selection functions, allowing search by note aliases.

*Breaking changes*

- Remove unused =capture-properties= from templates.

*Fixes*

- Merge template properties with =vulpea-create-default-template= properties instead of overriding them.
- Trim whitespace from all user input (names, prices, etc.) to prevent formatting issues ([[https://github.com/d12frosted/vino/issues/101][#101]]).

*Documentation*

- Document international character handling and char-fold matching ([[https://github.com/d12frosted/vino/issues/71][#71]]).

** v0.5.0

This release migrates Vino to Vulpea v2, which removes the org-roam dependency and introduces breaking changes to the setup process. All documentation has been updated to reflect these changes, including comprehensive troubleshooting guides and improved examples.

*Breaking changes*

- *Vulpea v2 Migration*: Vino now requires Vulpea v2, which no longer depends on org-roam.
- *Setup Changes*: The =vulpea-setup= function no longer exists. Users must configure =vulpea-db-location=, =vulpea-db-sync-directories=, and enable =vulpea-db-autosync-mode= manually.
- *Database Sync*: Replace =org-roam-db-sync= with =vulpea-db-sync-full-scan=.
- *Template Syntax*: Template file-name patterns now use =${timestamp}= instead of =%<%Y%m%d%H%M%S>=.
- *Directory References*: Templates and configuration now reference =vulpea-default-notes-directory= instead of =org-roam-directory=.
- *Function Renames*: =org-roam-alias-add= replaced with =vulpea-buffer-alias-add=.
- *Internal Function*: =vino--slug= removed in favor of =vulpea-title-to-slug=.

*Features*

- New function: =vino-entry-set-price= to update wine entry prices.
- Add "Price Public" column to inventory UI.
- Inventory: Add hook for location change.

*Fixes*

- Use updated note when reordering meta.
- Define =vino-entry-meta-props-order= as =var= and not a =const=.